[Fix]: Fixed registerheader misaligning h1 value

--- a/front-end/web-next/styles/globals.css
+++ b/front-end/web-next/styles/globals.css
@@ -76,3 +76,7 @@ a {
   background-color: transparent;
   /* border: 0; */
 }
+
+.ant-form-item {
+  margin-bottom: 8px;
+}
